# LifeAgent

./: .gitignore  CHANGELOG.md  PLAN_TRACKER.md  README.md
sentinel-desk/: .gitignore  README.md  pyproject.toml
sentinel-desk/docs/: AGENT_EVAL.md  ARCHITECTURE.md  CASE_STUDY.md  DEMO_VIDEO_SCRIPT.md  EVAL_REPORT.md  INTERVIEW_PROJECT.md  LIVE_VERIFICATION.md  PIVOT_POSTMORTEM.md  PRIVACY_AUDIT.md  RECORDING_CHECKLIST.md  SECURITY_MODEL.md  UI_CONTRACT.md
sentinel-desk/scripts/: live_verification_preflight.sh  record_portfolio_demo.sh
sentinel-desk/sentineldesk/: __init__.py  acceptance.py  audit.py  cdp.py  chrome.py  cli.py  config.py  daily.py  db.py  extract.py  gmail_readiness.py  gmail_sync.py  gmail_sync_diagnostics.py  monitor.py  plantracker.py  policy.py  privacy.py  redact.py  relative_dates.py  relative_times.py  reports.py  retention.py  scenarios.py  secrets.py  server.py  tasks.py
sentinel-desk/tests/: test_agent_eval.py  test_agent_orchestration.py  test_authenticated_integrations.py  test_calendar_action.py  test_calendar_draft_gc.py  test_cdp.py  test_chrome.py  test_cli_db.py  test_dashboard_smoke.py  test_email_calendar_agent.py  test_eval_email_extract.py  test_evidence_package.py  test_extract.py  test_gmail_category_gate.py  test_learn_from_ignore.py  test_live_verification.py  test_memory.py  test_model_loop.py  test_monitor.py  test_past_deadline_hidden.py  test_plantracker.py  test_policy.py  test_privacy_audit.py  test_rag_embeddings.py  test_redact.py  test_relative_dates.py  test_relative_deadline.py  test_relative_times.py  (+5 more)
(+131 files in other folders)
